// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BannerSlim renders an icon with accessibility label 1`] = `
<div
  className="box errorWeak mdDirectionRow paddingX4 paddingY0 paddingY4 rounding4 xsDirectionColumn xsDisplayFlex xsItemsCenter"
  style={
    Object {
      "width": "100%",
    }
  }
>
  <div
    className="Flex rowGap4 columnGap0 flexGrow mdItemsCenter xsDirectionRow xsItemsStart"
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <div
      className="FlexItem selfStart"
    >
      <svg
        aria-hidden={null}
        aria-label="accessibility label with error"
        className="error icon iconBlock"
        height={16}
        role="img"
        viewBox="0 0 24 24"
        width={16}
      >
        <path
          d="test-file-stub"
        />
      </svg>
    </div>
    <div
      className="FlexItem flexGrow"
    >
      <div
        className="box"
        style={
          Object {
            "marginTop": "-1px",
          }
        }
      >
        <span
          className="default alignStart breakWord Text fontSize300 fontWeightNormal"
        >
          test
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`BannerSlim renders complex message 1`] = `
<div
  className="box mdDirectionRow paddingX4 paddingY0 paddingY4 rounding4 secondary xsDirectionColumn xsDisplayFlex xsItemsCenter"
  style={
    Object {
      "width": "100%",
    }
  }
>
  <div
    className="Flex rowGap4 columnGap0 flexGrow mdItemsCenter xsDirectionRow xsItemsStart"
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <div
      className="FlexItem flexGrow"
    >
      <div
        className="box"
      >
        <span
          className="default alignStart breakWord Text fontSize300 fontWeightNormal"
        >
          The campaign
           
          <span
            className="default alignStart breakWord Text fontSize300 fontWeightSemiBold"
          >
            Back to School
          </span>
           
          is regularly hitting its
           
          <a
            className="noOutline inheritColor rounding0 inlineBlock tapTransition hoverNoUnderline underline outlineFocus"
            href="http://www.pinterest.com"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyPress={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            rel=""
          >
            daily cap
          </a>
          . Consider raising daily caps to increase scale for a similar CPC and CTR.
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`BannerSlim renders neutral type with message 1`] = `
<div
  className="box mdDirectionRow paddingX4 paddingY0 paddingY4 rounding4 secondary xsDirectionColumn xsDisplayFlex xsItemsCenter"
  style={
    Object {
      "width": "100%",
    }
  }
>
  <div
    className="Flex rowGap4 columnGap0 flexGrow mdItemsCenter xsDirectionRow xsItemsStart"
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <div
      className="FlexItem flexGrow"
    >
      <div
        className="box"
      >
        <span
          className="default alignStart breakWord Text fontSize300 fontWeightNormal"
        >
          test
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`BannerSlim renders non-neutral compact with accessibility label 1`] = `
<div
  className="box mdDirectionRow paddingX0 paddingY0 paddingY1 rounding4 transparent xsDirectionColumn xsDisplayFlex xsItemsCenter"
  style={
    Object {
      "width": "100%",
    }
  }
>
  <div
    className="Flex rowGap2 columnGap0 flexGrow mdItemsCenter xsDirectionRow xsItemsStart"
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <div
      className="FlexItem selfStart"
    >
      <svg
        aria-hidden={null}
        aria-label="accessibility label with error"
        className="error icon iconBlock"
        height={16}
        role="img"
        viewBox="0 0 24 24"
        width={16}
      >
        <path
          d="test-file-stub"
        />
      </svg>
    </div>
    <div
      className="FlexItem flexGrow"
    >
      <div
        className="box"
        style={
          Object {
            "marginTop": "-1px",
          }
        }
      >
        <span
          className="default alignStart breakWord Text fontSize300 fontWeightNormal"
        >
          test
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`BannerSlim renders primary action and dismiss button 1`] = `
<div
  className="box mdDirectionRow paddingX4 paddingY0 paddingY4 rounding4 secondary xsDirectionColumn xsDisplayFlex xsItemsCenter"
  style={
    Object {
      "width": "100%",
    }
  }
>
  <div
    className="Flex rowGap4 columnGap0 flexGrow mdItemsCenter xsDirectionRow xsItemsStart"
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <div
      className="FlexItem flexGrow"
    >
      <div
        className="box"
      >
        <span
          className="default alignStart breakWord Text fontSize300 fontWeightNormal"
        >
          test
        </span>
      </div>
    </div>
    <div
      className="FlexItem flexNone"
    >
      <div
        className="Flex rowGap4 columnGap0 xsDirectionRow xsItemsCenter"
      >
        <div
          className="FlexItem"
        >
          <div
            className="box flexNone mdDisplayFlex xsDisplayNone"
          >
            <button
              aria-label="test"
              className="button block accessibilityOutline parentButton"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              type="button"
            >
              <div
                className="button block accessibilityOutline tapTransition sm white enabled childrenDiv"
              >
                <div
                  className="default alignCenter Text fontSize200 fontWeightSemiBold"
                >
                  test
                </div>
              </div>
            </button>
          </div>
        </div>
        <div
          className="FlexItem"
        >
          <button
            aria-label="Dismiss banner"
            className="parentButton"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={0}
            type="button"
          >
            <div
              className="button tapTransition enabled"
            >
              <div
                className="pog transparent"
                style={
                  Object {
                    "height": 24,
                    "width": 24,
                  }
                }
              >
                <svg
                  aria-hidden={true}
                  aria-label=""
                  className="default icon iconBlock"
                  height={12}
                  role="img"
                  viewBox="0 0 24 24"
                  width={12}
                >
                  <path
                    d="test-file-stub"
                  />
                </svg>
              </div>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="box flexNone marginTop4 mdDisplayNone selfEnd xsDisplayFlex"
  >
    <button
      aria-label="test"
      className="button block accessibilityOutline parentButton"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <div
        className="button block accessibilityOutline tapTransition sm white enabled childrenDiv"
      >
        <div
          className="default alignCenter Text fontSize200 fontWeightSemiBold"
        >
          test
        </div>
      </div>
    </button>
  </div>
</div>
`;

exports[`BannerSlim renders simple message with helper link 1`] = `
<div
  className="box mdDirectionRow paddingX4 paddingY0 paddingY4 rounding4 secondary xsDirectionColumn xsDisplayFlex xsItemsCenter"
  style={
    Object {
      "width": "100%",
    }
  }
>
  <div
    className="Flex rowGap4 columnGap0 flexGrow mdItemsCenter xsDirectionRow xsItemsStart"
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <div
      className="FlexItem flexGrow"
    >
      <div
        className="box"
      >
        <span
          className="default alignStart breakWord Text fontSize300 fontWeightNormal"
        >
          test
           
          <span
            className="default alignStart breakWord Text fontSize300 fontWeightNormal"
          >
            <a
              aria-label="Learn more Pinterest.com"
              className="noOutline inheritColor rounding0 inlineBlock tapTransition hoverNoUnderline underline outlineFocus"
              href="http://www.pinterest.com"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              rel=""
            >
              Learn more
            </a>
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;
